--- a/006 - feature_engineering_2.ipynb
+++ b/006 - feature_engineering_2.ipynb
@@ -1726,7 +1726,8 @@
     "- drop price features first before going volume?\n",
     "- difference between \"wednesday\" model vs other days?\n",
     "- p-value?\n",
-    "- \"usefulness\" of trend_30m (lag 5) as target, backtesting?"
+    "- \"usefulness\" of trend_30m (future 5 minutes) as target, backtesting?\n",
+    "- redefine up, down, neutral?"
    ]
   },
   {
