--- a/006 - feature_engineering_2.ipynb
+++ b/006 - feature_engineering_2.ipynb
@@ -235,10 +235,10 @@
    "metadata": {},
    "source": [
     "# Price\n",
-    "z: standard deviation relative to mean of past\n",
-    "pct: percentage change relative to mean of past\n",
-    "mean: mean of past\n",
-    "std: standard deviation of past\n",
+    "z: standard deviation relative to mean of past  \n",
+    "pct: percentage change relative to mean of past  \n",
+    "mean: mean of past  \n",
+    "std: standard deviation of past  \n",
     "\n",
     "When computing mean of past, should we include value of current time?"
    ]
@@ -269,10 +269,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:00<00:00, 6939.21it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 6311.47it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 7198.47it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 7202.07it/s]\n"
+      "  0%|          | 0/3634 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3634/3634 [00:00<00:00, 6280.26it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 6629.81it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 7480.79it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 7030.51it/s]\n"
      ]
     },
     {
@@ -652,7 +659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:02<00:00, 1372.83it/s]\n"
+      "100%|██████████| 3634/3634 [00:02<00:00, 1369.46it/s]\n"
      ]
     },
     {
@@ -837,14 +844,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 92%|█████████▏| 3333/3634 [00:02<00:00, 1402.72it/s]"
+      "  0%|          | 0/3634 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:02<00:00, 1402.87it/s]\n"
+      "100%|██████████| 3634/3634 [00:02<00:00, 1448.99it/s]\n"
      ]
     }
    ],
@@ -868,9 +875,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:00<00:00, 11858.59it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 11736.47it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 11619.59it/s]\n"
+      "100%|██████████| 3634/3634 [00:00<00:00, 12197.86it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 12271.08it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 11515.92it/s]\n"
      ]
     }
    ],
@@ -1332,6 +1339,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build Targets\n",
+    "1. trend_30m_z (future 5 minute)\n",
+    "1. trend_30m_z_gap5\n",
+    "\n",
+    "Trend can be built using standard deviation or percentage. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1497,7 +1515,7 @@
     "        return 'neutral'\n",
     "    \n",
     "\n",
-    "df['trend_30m'] = df['z_close_30m'].apply(get_trend)\n",
+    "df['trend_30m_z'] = df['z_close_30m'].apply(get_trend)\n",
     "df.head(3)"
    ]
   },
@@ -1505,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict trend_30m in 5 minutes"
+    "Predict trend_30m_z in 5 minutes"
    ]
   },
   {
@@ -1517,7 +1535,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:03<00:00, 1207.62it/s]\n"
+      "  3%|▎         | 113/3634 [00:00<00:03, 1120.26it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3634/3634 [00:03<00:00, 1200.04it/s]\n"
      ]
     },
     {
@@ -1599,7 +1624,7 @@
     "    pct_change = df_day['close'].pct_change()\n",
     "    data = pd.DataFrame()\n",
     "    data['datetime'] = df_day['datetime']\n",
-    "    data['target'] = df_day['trend_30m'].shift(-5).values\n",
+    "    data['target'] = df_day['trend_30m_z'].shift(-5).values\n",
     "    data['lag_0'] = pct_change.values\n",
     "\n",
     "    for i in range(30):\n",
@@ -1649,7 +1674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:00<00:00, 19246.46it/s]\n"
+      "100%|██████████| 3634/3634 [00:00<00:00, 17978.86it/s]\n"
      ]
     },
     {
@@ -1674,7 +1699,7 @@
     "    if df_day.shape[0] == 0:\n",
     "        continue\n",
     "    df_day = df_day.copy()\n",
-    "    df_day['target'] = df_day['trend_30m'].shift(-5).values\n",
+    "    df_day['target'] = df_day['trend_30m_z'].shift(-5).values\n",
     "    df2.append(df_day)\n",
     "df2 = pd.concat(df2)\n",
     "\n",
@@ -1844,10 +1869,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:00<00:00, 6863.31it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 6045.09it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 6854.80it/s]\n",
-      "100%|██████████| 3634/3634 [00:00<00:00, 6861.35it/s]\n"
+      "  0%|          | 0/3634 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3634/3634 [00:00<00:00, 6688.46it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 5793.65it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 6833.06it/s]\n",
+      "100%|██████████| 3634/3634 [00:00<00:00, 6880.50it/s]\n"
      ]
     },
     {
@@ -2051,7 +2083,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3634/3634 [00:00<00:00, 14189.31it/s]\n"
+      "100%|██████████| 3634/3634 [00:00<00:00, 13530.66it/s]\n"
      ]
     }
    ],
