mean reversion vs momentum

--- a/008 - dataset_prep.ipynb
+++ b/008 - dataset_prep.ipynb
@@ -271,7 +271,10 @@
       "2023-12-19 00:00:00-05:00 113\n",
       "2024-01-15 00:00:00-05:00 329\n",
       "2024-01-19 00:00:00-05:00 353\n",
-      "2024-01-22 00:00:00-05:00 89\n"
+      "2024-01-22 00:00:00-05:00 89\n",
+      "2024-02-19 00:00:00-05:00 68\n",
+      "2024-02-20 00:00:00-05:00 113\n",
+      "2024-02-26 00:00:00-05:00 0\n"
      ]
     }
    ],
@@ -327,14 +330,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/data/data_imputed_20240217', '/data/data_imputed_trade_hour_20240217', '/data/features_20240215', '/data/features_20240215/meta/values_block_4/meta', '/data/features_20240215/meta/values_block_3/meta', '/data/features_20240215/meta/values_block_2/meta', '/data/features_20240215/meta/values_block_1/meta', '/data/features_20240215/meta/values_block_0/meta']\n"
+      "['/data/data_imputed_20240217', '/data/data_imputed_20240226', '/data/data_imputed_trade_hour_20240217', '/data/data_imputed_trade_hour_20240226', '/data/features_20240215', '/data/features_20240215/meta/values_block_4/meta', '/data/features_20240215/meta/values_block_3/meta', '/data/features_20240215/meta/values_block_2/meta', '/data/features_20240215/meta/values_block_1/meta', '/data/features_20240215/meta/values_block_0/meta']\n"
      ]
     }
    ],
    "source": [
     "with pd.HDFStore('./large_files/data2.h5') as store:\n",
-    "    store.put('data/data_imputed_20240217', df2, format='table')\n",
-    "    store.put('data/data_imputed_trade_hour_20240217', df3, format='table')\n",
+    "    store.put('data/data_imputed_20240226', df2, format='table')\n",
+    "    store.put('data/data_imputed_trade_hour_20240226', df3, format='table')\n",
     "    print(list(store.keys()))"
    ]
   },
