--- a/011 - mean_reversion_vs_momentum.ipynb
+++ b/011 - mean_reversion_vs_momentum.ipynb
@@ -149,7 +149,7 @@
     "            \n",
     "            cerebro = bt.Cerebro()\n",
     "            cerebro.broker.setcash(capital)\n",
-    "            cerebro.addsizer(bt.sizers.PercentSizer, percents=100)\n",
+    "            # cerebro.addsizer(bt.sizers.PercentSizer, percents=100)\n",
     "            # cerebro.addsizer(bt.sizers.AllInSizerInt, percents=100)\n",
     "            cerebro.adddata(data)\n",
     "            cerebro.addstrategy(strategy, buffer=self.buffer, total_len=df_day.shape[0], **kwargs)\n",
@@ -408,7 +408,13 @@
       "Final Portfolio Value: 106872.04\n",
       "\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting Portfolio Value: 106872.04\n",
       "2021-04-07T14:00:00, Long at 59.74, Cash: 106872.04, Portfolio Value: 106872.04, Shares Owned: 0\n",
       "2021-04-07T14:01:00, Buy executed at 59.73, Cash: 74.80, Portfolio Value: 106693.24, Shares Owned: 1788\n",
@@ -1503,7 +1509,13 @@
       "\n",
       "\n",
       "\n",
-      "Starting Portfolio Value: 102556.37\n",
+      "Starting Portfolio Value: 102556.37\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2021-03-24T14:30:00, Long at 59.54, Cash: 102556.37, Portfolio Value: 102556.37, Shares Owned: 0\n",
       "2021-03-24T14:31:00, Buy executed at 59.54, Cash: 28.49, Portfolio Value: 102900.77, Shares Owned: 1722\n",
       "2021-03-24T14:31:00, Close at 59.74, Cash: 28.49, Portfolio Value: 102900.77, Shares Owned: 1722\n",
@@ -4384,7 +4396,13 @@
       "Final Portfolio Value: 101118.82\n",
       "\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting Portfolio Value: 101118.82\n",
       "2021-03-31T14:36:00, Long at 60.34, Cash: 101118.82, Portfolio Value: 101118.82, Shares Owned: 0\n",
       "2021-03-31T14:37:00, Buy executed at 60.34, Cash: 49.32, Portfolio Value: 101152.32, Shares Owned: 1675\n",
@@ -6121,7 +6139,13 @@
       "Final Portfolio Value: 102884.23\n",
       "\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting Portfolio Value: 102884.23\n",
       "2021-03-10T15:14:00, Long at 64.55, Cash: 102884.23, Portfolio Value: 102884.23, Shares Owned: 0\n",
       "2021-03-10T15:15:00, Buy executed at 64.55, Cash: 56.08, Portfolio Value: 102868.30, Shares Owned: 1593\n",
@@ -7396,7 +7420,13 @@
       "\n",
       "\n",
       "\n",
-      "Starting Portfolio Value: 98407.38\n",
+      "Starting Portfolio Value: 98407.38\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2021-03-31T14:43:00, Long at 60.46, Cash: 98407.38, Portfolio Value: 98407.38, Shares Owned: 0\n",
       "2021-03-31T14:44:00, Buy executed at 60.46, Cash: 38.96, Portfolio Value: 98374.84, Shares Owned: 1627\n",
       "2021-03-31T14:57:00, Close at 60.52, Cash: 38.96, Portfolio Value: 98505.00, Shares Owned: 1627\n",
@@ -9559,7 +9589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -9890,7 +9920,13 @@
       "\n",
       "\n",
       "\n",
-      "Starting Portfolio Value: 97150.23\n",
+      "Starting Portfolio Value: 97150.23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2023-03-22T14:17:00, Long at 70.02, Cash: 97150.23, Portfolio Value: 97150.23, Shares Owned: 0\n",
       "2023-03-22T14:18:00, Buy executed at 70.02, Cash: 32.49, Portfolio Value: 97053.14, Shares Owned: 1387\n",
       "2023-03-22T14:37:00, Close at 69.77, Cash: 32.49, Portfolio Value: 96803.48, Shares Owned: 1387\n",
@@ -11215,7 +11251,13 @@
       "Final Portfolio Value: 96442.29\n",
       "\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting Portfolio Value: 96442.29\n",
       "2023-03-29T14:35:00, Long at 74.05, Cash: 96442.29, Portfolio Value: 96442.29, Shares Owned: 0\n",
       "2023-03-29T14:36:00, Buy executed at 74.05, Cash: 29.19, Portfolio Value: 96468.33, Shares Owned: 1302\n",
