cointegration & change to new data

--- a/008 - dataset_prep.ipynb
+++ b/008 - dataset_prep.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from utils.common import day_aware_shift, plot_confusion_matrix\n",
+    "from utils.common import day_aware_shift, plot_confusion_matrix, read_bm_data\n",
     "from utils.features import create_lag, create_rsi, create_dst, create_ma_ratio, create_z, \\\n",
     "    create_bollinger_band, create_money_flow_index, create_macd_diff, \\\n",
     "    create_ppo, create_pvo\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -58,40 +58,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>525</th>\n",
+       "      <th>380</th>\n",
        "      <td>2007-04-02</td>\n",
        "      <td>0700</td>\n",
-       "      <td>65.74</td>\n",
-       "      <td>65.77</td>\n",
-       "      <td>65.74</td>\n",
-       "      <td>65.77</td>\n",
-       "      <td>4</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>1</td>\n",
        "      <td>2007-04-02 07:00:00-04:00</td>\n",
        "      <td>Monday</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>526</th>\n",
+       "      <th>381</th>\n",
        "      <td>2007-04-02</td>\n",
        "      <td>0701</td>\n",
-       "      <td>65.75</td>\n",
-       "      <td>65.75</td>\n",
-       "      <td>65.70</td>\n",
-       "      <td>65.70</td>\n",
-       "      <td>20</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>669.4</td>\n",
+       "      <td>669.3</td>\n",
+       "      <td>669.3</td>\n",
+       "      <td>2</td>\n",
        "      <td>2007-04-02 07:01:00-04:00</td>\n",
        "      <td>Monday</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>527</th>\n",
+       "      <th>382</th>\n",
        "      <td>2007-04-02</td>\n",
        "      <td>0702</td>\n",
-       "      <td>65.72</td>\n",
-       "      <td>65.72</td>\n",
-       "      <td>65.65</td>\n",
-       "      <td>65.66</td>\n",
-       "      <td>40</td>\n",
+       "      <td>669.2</td>\n",
+       "      <td>669.3</td>\n",
+       "      <td>669.2</td>\n",
+       "      <td>669.2</td>\n",
+       "      <td>5</td>\n",
        "      <td>2007-04-02 07:02:00-04:00</td>\n",
        "      <td>Monday</td>\n",
        "      <td>4</td>\n",
@@ -101,27 +101,27 @@
        "</div>"
       ],
       "text/plain": [
-       "           date  time   open   high    low  close  volume  \\\n",
-       "525  2007-04-02  0700  65.74  65.77  65.74  65.77       4   \n",
-       "526  2007-04-02  0701  65.75  65.75  65.70  65.70      20   \n",
-       "527  2007-04-02  0702  65.72  65.72  65.65  65.66      40   \n",
+       "           date  time   open  ...                  datetime     day  month\n",
+       "380  2007-04-02  0700  669.4  ... 2007-04-02 07:00:00-04:00  Monday      4\n",
+       "381  2007-04-02  0701  669.4  ... 2007-04-02 07:01:00-04:00  Monday      4\n",
+       "382  2007-04-02  0702  669.2  ... 2007-04-02 07:02:00-04:00  Monday      4\n",
        "\n",
-       "                     datetime     day  month  \n",
-       "525 2007-04-02 07:00:00-04:00  Monday      4  \n",
-       "526 2007-04-02 07:01:00-04:00  Monday      4  \n",
-       "527 2007-04-02 07:02:00-04:00  Monday      4  "
+       "[3 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_wti_1m = pickle.load(open('./large_files/cl-1m-2.pkl', 'rb'))\n",
-    "df_wti_1m = df_wti_1m[(df_wti_1m['datetime'].dt.time >= datetime.time(hour=7, minute=0)) & (df_wti_1m['datetime'].dt.hour <= 16)]\n",
+    "# df_wti_1m = pickle.load(open('./large_files/cl-1m-2.pkl', 'rb'))\n",
+    "# df_wti_1m = df_wti_1m[(df_wti_1m['datetime'].dt.time >= datetime.time(hour=7, minute=0)) & (df_wti_1m['datetime'].dt.hour <= 16)]\n",
     "\n",
-    "df = df_wti_1m.copy()\n",
+    "df_1m = read_bm_data('data/btm/gc-1m.csv')\n",
+    "df_1m = df_1m[(df_1m['datetime'].dt.time >= datetime.time(hour=7, minute=0)) & (df_1m['datetime'].dt.hour <= 16)]\n",
+    "\n",
+    "df = df_1m.copy()\n",
     "df['month'] = df['datetime'].dt.month\n",
     "df.head(3)"
    ]
@@ -135,120 +135,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2007-05-28 00:00:00-04:00 208\n",
-      "2007-07-04 00:00:00-04:00 265\n",
-      "2007-08-01 00:00:00-04:00 227\n",
-      "2007-09-03 00:00:00-04:00 287\n",
-      "2007-11-16 00:00:00-05:00 331\n",
-      "2007-11-22 00:00:00-05:00 228\n",
-      "2007-12-18 00:00:00-05:00 310\n",
-      "2008-01-21 00:00:00-05:00 228\n",
-      "2008-01-22 00:00:00-05:00 315\n",
-      "2008-02-18 00:00:00-05:00 345\n",
-      "2008-02-20 00:00:00-05:00 310\n",
-      "2008-03-19 00:00:00-04:00 311\n",
-      "2008-05-26 00:00:00-04:00 304\n",
-      "2008-07-04 00:00:00-04:00 350\n",
-      "2008-08-31 00:00:00-04:00 14\n",
-      "2008-09-14 00:00:00-04:00 257\n",
-      "2008-10-21 00:00:00-04:00 346\n",
-      "2008-11-20 00:00:00-05:00 299\n",
-      "2008-11-27 00:00:00-05:00 314\n",
-      "2009-02-16 00:00:00-05:00 354\n",
-      "2009-05-25 00:00:00-04:00 276\n",
-      "2009-07-03 00:00:00-04:00 321\n",
-      "2009-09-07 00:00:00-04:00 315\n",
-      "2009-11-26 00:00:00-05:00 255\n",
+      "2007-05-28 00:00:00-04:00 91\n",
+      "2007-05-31 00:00:00-04:00 237\n",
+      "2007-07-04 00:00:00-04:00 148\n",
+      "2007-07-31 00:00:00-04:00 234\n",
+      "2007-08-01 00:00:00-04:00 54\n",
+      "2007-08-02 00:00:00-04:00 26\n",
+      "2007-08-03 00:00:00-04:00 267\n",
+      "2007-08-06 00:00:00-04:00 217\n",
+      "2007-08-07 00:00:00-04:00 230\n",
+      "2007-08-08 00:00:00-04:00 216\n",
+      "2007-08-09 00:00:00-04:00 317\n",
+      "2007-08-10 00:00:00-04:00 285\n",
+      "2007-08-13 00:00:00-04:00 150\n",
+      "2007-08-14 00:00:00-04:00 184\n",
+      "2007-08-15 00:00:00-04:00 151\n",
+      "2007-08-16 00:00:00-04:00 290\n",
+      "2007-08-17 00:00:00-04:00 242\n",
+      "2007-08-20 00:00:00-04:00 173\n",
+      "2007-08-21 00:00:00-04:00 167\n",
+      "2007-08-22 00:00:00-04:00 164\n",
+      "2007-08-23 00:00:00-04:00 193\n",
+      "2007-08-24 00:00:00-04:00 167\n",
+      "2007-08-27 00:00:00-04:00 86\n",
+      "2007-08-28 00:00:00-04:00 181\n",
+      "2007-08-29 00:00:00-04:00 132\n",
+      "2007-08-30 00:00:00-04:00 125\n",
+      "2007-08-31 00:00:00-04:00 166\n",
+      "2007-09-03 00:00:00-04:00 19\n",
+      "2007-09-04 00:00:00-04:00 156\n",
+      "2007-09-05 00:00:00-04:00 117\n",
+      "2007-09-06 00:00:00-04:00 226\n",
+      "2007-09-07 00:00:00-04:00 200\n",
+      "2007-09-10 00:00:00-04:00 102\n",
+      "2007-09-11 00:00:00-04:00 167\n",
+      "2007-09-12 00:00:00-04:00 137\n",
+      "2007-09-13 00:00:00-04:00 98\n",
+      "2007-09-14 00:00:00-04:00 137\n",
+      "2007-09-17 00:00:00-04:00 109\n",
+      "2007-09-18 00:00:00-04:00 133\n",
+      "2007-09-19 00:00:00-04:00 74\n",
+      "2007-09-20 00:00:00-04:00 147\n",
+      "2007-09-21 00:00:00-04:00 107\n",
+      "2007-09-24 00:00:00-04:00 80\n",
+      "2007-09-25 00:00:00-04:00 127\n",
+      "2007-09-26 00:00:00-04:00 116\n",
+      "2007-09-27 00:00:00-04:00 120\n",
+      "2007-09-28 00:00:00-04:00 44\n",
+      "2007-10-01 00:00:00-04:00 18\n",
+      "2007-10-02 00:00:00-04:00 16\n",
+      "2007-11-22 00:00:00-05:00 207\n",
+      "2007-11-29 00:00:00-05:00 333\n",
+      "2007-11-30 00:00:00-05:00 257\n",
+      "2007-12-24 00:00:00-05:00 281\n",
+      "2008-01-31 00:00:00-05:00 178\n",
+      "2008-02-18 00:00:00-05:00 267\n",
+      "2008-03-31 00:00:00-04:00 265\n",
+      "2008-04-01 00:00:00-04:00 189\n",
+      "2008-05-26 00:00:00-04:00 186\n",
+      "2008-05-30 00:00:00-04:00 269\n",
+      "2008-07-04 00:00:00-04:00 263\n",
+      "2008-07-31 00:00:00-04:00 305\n",
+      "2008-08-01 00:00:00-04:00 342\n",
+      "2008-08-04 00:00:00-04:00 349\n",
+      "2008-08-06 00:00:00-04:00 318\n",
+      "2008-08-07 00:00:00-04:00 311\n",
+      "2008-08-08 00:00:00-04:00 344\n",
+      "2008-08-12 00:00:00-04:00 331\n",
+      "2008-08-13 00:00:00-04:00 323\n",
+      "2008-08-14 00:00:00-04:00 345\n",
+      "2008-08-15 00:00:00-04:00 341\n",
+      "2008-08-18 00:00:00-04:00 284\n",
+      "2008-08-19 00:00:00-04:00 317\n",
+      "2008-08-20 00:00:00-04:00 317\n",
+      "2008-08-21 00:00:00-04:00 280\n",
+      "2008-08-22 00:00:00-04:00 278\n",
+      "2008-08-25 00:00:00-04:00 230\n",
+      "2008-08-26 00:00:00-04:00 276\n",
+      "2008-08-27 00:00:00-04:00 230\n",
+      "2008-08-28 00:00:00-04:00 275\n",
+      "2008-08-29 00:00:00-04:00 178\n",
+      "2008-09-01 00:00:00-04:00 150\n",
+      "2008-09-02 00:00:00-04:00 265\n",
+      "2008-09-03 00:00:00-04:00 231\n",
+      "2008-09-04 00:00:00-04:00 240\n",
+      "2008-09-05 00:00:00-04:00 283\n",
+      "2008-09-08 00:00:00-04:00 245\n",
+      "2008-09-09 00:00:00-04:00 300\n",
+      "2008-09-10 00:00:00-04:00 314\n",
+      "2008-09-11 00:00:00-04:00 269\n",
+      "2008-09-12 00:00:00-04:00 230\n",
+      "2008-09-15 00:00:00-04:00 216\n",
+      "2008-09-16 00:00:00-04:00 238\n",
+      "2008-09-17 00:00:00-04:00 330\n",
+      "2008-09-18 00:00:00-04:00 345\n",
+      "2008-09-19 00:00:00-04:00 206\n",
+      "2008-09-22 00:00:00-04:00 240\n",
+      "2008-09-23 00:00:00-04:00 210\n",
+      "2008-09-24 00:00:00-04:00 224\n",
+      "2008-09-25 00:00:00-04:00 252\n",
+      "2008-09-26 00:00:00-04:00 172\n",
+      "2008-09-29 00:00:00-04:00 155\n",
+      "2008-09-30 00:00:00-04:00 37\n",
+      "2008-10-01 00:00:00-04:00 37\n",
+      "2008-10-02 00:00:00-04:00 31\n",
+      "2008-11-27 00:00:00-05:00 192\n",
+      "2008-12-24 00:00:00-05:00 331\n",
+      "2009-01-19 00:00:00-05:00 321\n",
+      "2009-02-16 00:00:00-05:00 305\n",
+      "2009-05-25 00:00:00-04:00 251\n",
+      "2009-07-03 00:00:00-04:00 280\n",
+      "2009-09-07 00:00:00-04:00 305\n",
+      "2009-11-26 00:00:00-05:00 254\n",
       "2009-11-27 00:00:00-05:00 285\n",
       "2009-12-24 00:00:00-05:00 285\n",
-      "2010-01-18 00:00:00-05:00 250\n",
-      "2010-02-15 00:00:00-05:00 250\n",
-      "2010-05-31 00:00:00-04:00 299\n",
-      "2010-07-05 00:00:00-04:00 311\n",
-      "2010-09-06 00:00:00-04:00 314\n",
-      "2010-11-25 00:00:00-05:00 254\n",
+      "2010-01-18 00:00:00-05:00 249\n",
+      "2010-02-15 00:00:00-05:00 251\n",
+      "2010-05-31 00:00:00-04:00 301\n",
+      "2010-07-05 00:00:00-04:00 308\n",
+      "2010-09-06 00:00:00-04:00 267\n",
+      "2010-11-25 00:00:00-05:00 233\n",
       "2010-11-26 00:00:00-05:00 285\n",
-      "2011-01-17 00:00:00-05:00 253\n",
+      "2011-01-17 00:00:00-05:00 252\n",
       "2011-02-21 00:00:00-05:00 255\n",
-      "2011-05-30 00:00:00-04:00 296\n",
-      "2011-07-04 00:00:00-04:00 299\n",
-      "2011-09-05 00:00:00-04:00 314\n",
-      "2011-11-24 00:00:00-05:00 253\n",
+      "2011-05-30 00:00:00-04:00 283\n",
+      "2011-07-04 00:00:00-04:00 288\n",
+      "2011-09-05 00:00:00-04:00 315\n",
+      "2011-11-24 00:00:00-05:00 248\n",
       "2011-11-25 00:00:00-05:00 285\n",
-      "2012-01-16 00:00:00-05:00 253\n",
-      "2012-02-13 00:00:00-05:00 354\n",
-      "2012-02-20 00:00:00-05:00 254\n",
-      "2012-05-28 00:00:00-04:00 310\n",
-      "2012-07-04 00:00:00-04:00 312\n",
-      "2012-09-03 00:00:00-04:00 309\n",
-      "2012-11-22 00:00:00-05:00 246\n",
+      "2012-01-16 00:00:00-05:00 250\n",
+      "2012-02-20 00:00:00-05:00 250\n",
+      "2012-05-28 00:00:00-04:00 304\n",
+      "2012-07-04 00:00:00-04:00 304\n",
+      "2012-09-03 00:00:00-04:00 314\n",
+      "2012-11-22 00:00:00-05:00 247\n",
       "2012-11-23 00:00:00-05:00 285\n",
-      "2012-12-24 00:00:00-05:00 285\n",
-      "2013-01-21 00:00:00-05:00 253\n",
-      "2013-02-18 00:00:00-05:00 254\n",
-      "2013-05-27 00:00:00-04:00 296\n",
+      "2012-12-24 00:00:00-05:00 284\n",
+      "2013-01-21 00:00:00-05:00 252\n",
+      "2013-02-18 00:00:00-05:00 255\n",
+      "2013-05-27 00:00:00-04:00 297\n",
       "2013-06-11 00:00:00-04:00 313\n",
-      "2013-07-04 00:00:00-04:00 312\n",
-      "2013-09-02 00:00:00-04:00 314\n",
-      "2013-11-28 00:00:00-05:00 247\n",
+      "2013-07-04 00:00:00-04:00 310\n",
+      "2013-09-02 00:00:00-04:00 312\n",
+      "2013-11-28 00:00:00-05:00 249\n",
       "2013-11-29 00:00:00-05:00 285\n",
-      "2013-12-24 00:00:00-05:00 285\n",
-      "2014-01-20 00:00:00-05:00 253\n",
-      "2014-02-17 00:00:00-05:00 248\n",
-      "2014-05-26 00:00:00-04:00 288\n",
-      "2014-07-04 00:00:00-04:00 286\n",
-      "2014-09-01 00:00:00-04:00 297\n",
+      "2013-12-24 00:00:00-05:00 284\n",
+      "2014-01-20 00:00:00-05:00 250\n",
+      "2014-02-17 00:00:00-05:00 254\n",
+      "2014-05-26 00:00:00-04:00 274\n",
+      "2014-07-04 00:00:00-04:00 284\n",
+      "2014-09-01 00:00:00-04:00 289\n",
       "2014-11-27 00:00:00-05:00 240\n",
       "2014-11-28 00:00:00-05:00 285\n",
-      "2014-12-24 00:00:00-05:00 286\n",
+      "2014-12-24 00:00:00-05:00 285\n",
       "2015-01-19 00:00:00-05:00 240\n",
-      "2015-02-16 00:00:00-05:00 240\n",
-      "2015-05-25 00:00:00-04:00 300\n",
-      "2015-07-03 00:00:00-04:00 300\n",
-      "2015-09-07 00:00:00-04:00 300\n",
-      "2015-11-26 00:00:00-05:00 240\n",
+      "2015-02-16 00:00:00-05:00 239\n",
+      "2015-05-25 00:00:00-04:00 295\n",
+      "2015-07-03 00:00:00-04:00 299\n",
+      "2015-09-07 00:00:00-04:00 298\n",
+      "2015-11-26 00:00:00-05:00 226\n",
       "2015-11-27 00:00:00-05:00 285\n",
-      "2015-12-24 00:00:00-05:00 285\n",
-      "2016-01-18 00:00:00-05:00 240\n",
+      "2015-12-24 00:00:00-05:00 284\n",
+      "2016-01-18 00:00:00-05:00 235\n",
       "2016-02-15 00:00:00-05:00 240\n",
       "2016-05-30 00:00:00-04:00 300\n",
-      "2016-07-04 00:00:00-04:00 300\n",
+      "2016-07-04 00:00:00-04:00 299\n",
       "2016-09-05 00:00:00-04:00 300\n",
       "2016-11-24 00:00:00-05:00 240\n",
       "2016-11-25 00:00:00-05:00 285\n",
       "2017-01-16 00:00:00-05:00 240\n",
       "2017-02-20 00:00:00-05:00 240\n",
-      "2017-05-29 00:00:00-04:00 300\n",
+      "2017-05-29 00:00:00-04:00 298\n",
       "2017-07-04 00:00:00-04:00 300\n",
       "2017-09-04 00:00:00-04:00 300\n",
       "2017-11-23 00:00:00-05:00 240\n",
       "2017-11-24 00:00:00-05:00 285\n",
       "2018-01-15 00:00:00-05:00 240\n",
       "2018-02-19 00:00:00-05:00 240\n",
-      "2018-05-28 00:00:00-04:00 300\n",
-      "2018-07-04 00:00:00-04:00 300\n",
-      "2018-09-03 00:00:00-04:00 300\n",
-      "2018-11-22 00:00:00-05:00 240\n",
+      "2018-05-28 00:00:00-04:00 297\n",
+      "2018-07-04 00:00:00-04:00 299\n",
+      "2018-09-03 00:00:00-04:00 299\n",
+      "2018-11-22 00:00:00-05:00 239\n",
       "2018-11-23 00:00:00-05:00 285\n",
-      "2018-12-24 00:00:00-05:00 285\n",
-      "2019-01-21 00:00:00-05:00 240\n",
+      "2018-11-29 00:00:00-05:00 356\n",
+      "2018-12-24 00:00:00-05:00 284\n",
+      "2019-01-21 00:00:00-05:00 239\n",
       "2019-02-18 00:00:00-05:00 240\n",
-      "2019-05-27 00:00:00-04:00 300\n",
+      "2019-05-27 00:00:00-04:00 299\n",
       "2019-07-04 00:00:00-04:00 300\n",
       "2019-09-02 00:00:00-04:00 300\n",
       "2019-11-28 00:00:00-05:00 240\n",
       "2019-11-29 00:00:00-05:00 285\n",
       "2019-12-24 00:00:00-05:00 285\n",
-      "2020-01-20 00:00:00-05:00 240\n",
-      "2020-02-17 00:00:00-05:00 240\n",
-      "2020-05-25 00:00:00-04:00 300\n",
+      "2020-01-20 00:00:00-05:00 239\n",
+      "2020-02-17 00:00:00-05:00 238\n",
+      "2020-05-25 00:00:00-04:00 299\n",
       "2020-07-03 00:00:00-04:00 300\n",
       "2020-09-07 00:00:00-04:00 300\n",
       "2020-11-26 00:00:00-05:00 240\n",
@@ -257,24 +345,22 @@
       "2021-01-18 00:00:00-05:00 240\n",
       "2021-02-15 00:00:00-05:00 240\n",
       "2021-05-31 00:00:00-04:00 300\n",
-      "2021-07-05 00:00:00-04:00 300\n",
+      "2021-07-05 00:00:00-04:00 299\n",
       "2021-09-06 00:00:00-04:00 300\n",
       "2021-11-25 00:00:00-05:00 240\n",
-      "2021-11-26 00:00:00-05:00 285\n",
-      "2022-01-17 00:00:00-05:00 328\n",
-      "2022-02-21 00:00:00-05:00 330\n",
-      "2022-11-24 00:00:00-05:00 324\n",
+      "2021-11-26 00:00:00-05:00 284\n",
+      "2022-01-17 00:00:00-05:00 315\n",
+      "2022-02-21 00:00:00-05:00 329\n",
+      "2022-11-24 00:00:00-05:00 316\n",
       "2022-11-25 00:00:00-05:00 285\n",
-      "2023-01-16 00:00:00-05:00 327\n",
-      "2023-02-20 00:00:00-05:00 329\n",
-      "2023-12-18 00:00:00-05:00 349\n",
-      "2023-12-19 00:00:00-05:00 113\n",
-      "2024-01-15 00:00:00-05:00 329\n",
-      "2024-01-19 00:00:00-05:00 353\n",
-      "2024-01-22 00:00:00-05:00 89\n",
-      "2024-02-19 00:00:00-05:00 68\n",
-      "2024-02-20 00:00:00-05:00 113\n",
-      "2024-02-26 00:00:00-05:00 0\n"
+      "2022-11-29 00:00:00-05:00 248\n",
+      "2023-01-16 00:00:00-05:00 326\n",
+      "2023-02-20 00:00:00-05:00 322\n",
+      "2023-07-28 00:00:00-04:00 336\n",
+      "2023-11-23 00:00:00-05:00 313\n",
+      "2023-11-24 00:00:00-05:00 285\n",
+      "2024-01-15 00:00:00-05:00 320\n",
+      "2024-02-19 00:00:00-05:00 321\n"
      ]
     }
    ],
@@ -323,21 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/data/data_imputed_20240217', '/data/data_imputed_20240226', '/data/data_imputed_trade_hour_20240217', '/data/data_imputed_trade_hour_20240226', '/data/features_20240215', '/data/features_20240215/meta/values_block_4/meta', '/data/features_20240215/meta/values_block_3/meta', '/data/features_20240215/meta/values_block_2/meta', '/data/features_20240215/meta/values_block_1/meta', '/data/features_20240215/meta/values_block_0/meta']\n"
+      "['/data/cb', '/data/cl', '/data/gc']\n"
      ]
     }
    ],
    "source": [
-    "with pd.HDFStore('./large_files/data2.h5') as store:\n",
-    "    store.put('data/data_imputed_20240226', df2, format='table')\n",
-    "    store.put('data/data_imputed_trade_hour_20240226', df3, format='table')\n",
+    "with pd.HDFStore('./large_files/data_20240312.h5') as store:\n",
+    "    store.put('data/gc', df2, format='table')\n",
+    "    # store.put('data/data_imputed_trade_hour_20240226', df3, format='table')\n",
     "    print(list(store.keys()))"
    ]
   },
