compute annualized returns

--- a/015 - cointegration2.ipynb
+++ b/015 - cointegration2.ipynb
@@ -153,7 +153,8 @@
     "\n",
     "    # compute z-scores for wednesday\n",
     "    spread = df2_wed.close.values - hedge_ratio * df1_wed.close.values\n",
-    "    z = pd.DataFrame({'z': (spread - mean) / std}, index=df1_wed.index)\n",
+    "\n",
+    "    z = pd.DataFrame({'asset1': df1_wed.close.values, 'asset2': df2_wed.close.values, 'spread': spread, 'z': (spread - mean) / std}, index=df1_wed.index)\n",
     "    df_z.append(z)\n",
     "\n",
     "df_z = pd.concat(df_z)"
@@ -166,21 +167,11 @@
    "outputs": [],
    "source": [
     "def pair_trade_signals(\n",
-    "    df1,\n",
-    "    df2,\n",
     "    dfz,\n",
     "    short_entry_threshold=2.0, # sell 1 buy 2\n",
     "    long_entry_threshold=-2.0, # buy 1 sell 2\n",
     "\n",
     "):  \n",
-    "    long_entry_signals = []\n",
-    "    long_exit_signals = []\n",
-    "\n",
-    "    short_entry_signals = []\n",
-    "    short_exit_signals = []\n",
-    "\n",
-    "    dates = pd.Series(index=dfz.index.values, dtype=bool)\n",
-    "    wed_groups = dates.groupby(pd.Grouper(freq='D'))\n",
     "    positions = []\n",
     "\n",
     "    for day, df_day in dfz.groupby(pd.Grouper(level='datetime', freq='D')):\n",
@@ -188,38 +179,25 @@
     "        is_open = False\n",
     "        for time, row in df_day.iterrows():\n",
     "            z_score = row['z']\n",
-    "            if is_open and (time.time() >= pd.Timestamp('11:59').time()):\n",
+    "            if is_open and (time.time() == pd.Timestamp('11:59').time()):\n",
     "                position[time] = 0\n",
-    "            elif ((time.time() >= pd.Timestamp('9:30').time()) and (time.time() < pd.Timestamp('10:30').time())) and not is_open:\n",
+    "                break\n",
+    "            elif ((time.time() >= pd.Timestamp('9:00').time()) and (time.time() < pd.Timestamp('11:00').time())) and not is_open:\n",
     "                if z_score > short_entry_threshold:\n",
     "                    position[time] = -1\n",
-    "                    is_open = True\n",
+    "                    is_open = 1\n",
     "                elif z_score < long_entry_threshold:\n",
     "                    position[time] = 1\n",
-    "                    is_open = True\n",
-    "            elif abs(z_score) < 1 and is_open:\n",
+    "                    is_open = 2\n",
+    "            elif (is_open == 1 and z_score <= 0) or (is_open == 2 and z_score >= 0):\n",
     "                position[time] = 0\n",
     "                is_open = False\n",
+    "                break\n",
     "        position = position.ffill()\n",
     "        positions.append(position)\n",
     "    \n",
     "    positions = pd.concat(positions)\n",
     "    df_z = pd.concat([dfz, positions], axis=1).rename({0: 'position'}, axis=1)\n",
-    "\n",
-    "    #     for i in range(len(z_scores)):\n",
-    "    #         if (z_scores[i] > short_entry_threshold) & (times[i].time() < pd.Timestamp('11:00').time()):\n",
-    "    #             position[i] = -1  # Enter short position\n",
-    "    #         elif (z_scores[i] < long_entry_threshold) & (times[i].time() < pd.Timestamp('11:00').time()):\n",
-    "    #             position[i] = 1  # Enter long position\n",
-    "    #         elif abs(z_scores[i]) < 1:\n",
-    "    #             position[i] = 0  # Zero position\n",
-    "    #         else:\n",
-    "    #             position[i] = position[i-1]\n",
-    "    #     positions.append(position)\n",
-    "\n",
-    "    # positions = np.concatenate(positions)\n",
-    "    # df_z = dfz.copy()\n",
-    "    # df_z['position'] = positions\n",
     "\n",
     "    return df_z"
    ]
@@ -241,7 +219,7 @@
     "df1 = filter_df(df1_)\n",
     "df2 = filter_df(df2_)\n",
     "\n",
-    "df_pos = pair_trade_signals(df1, df2, df_z)\n",
+    "df_pos = pair_trade_signals(df_z)\n",
     "df_pos['cl'] = -df_pos['position']\n",
     "df_pos['gc'] = df_pos['position']\n",
     "df_pos.head()"
@@ -328,12 +306,12 @@
    "outputs": [],
    "source": [
     "portfolio[0].plot(\n",
-    "    subplots='all',\n",
+    "    subplots='orders',\n",
     "    title=asset1\n",
     ").show()\n",
     "\n",
     "portfolio[1].plot(\n",
-    "    subplots='all',\n",
+    "    subplots='orders',\n",
     "    title=asset2\n",
     ").show()"
    ]
@@ -365,8 +343,16 @@
     "    group_by=True,\n",
     "    call_seq='auto',\n",
     "    freq='1m'\n",
-    ")\n",
-    "portfolio2.plot(subplots='all', silence_warnings=True).show()"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "portfolio2.plot().show()"
    ]
   },
   {
@@ -393,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
